# license-checker

./: .gitignore  .licheignore  Makefile.am  THANKS  TODO  configure.ac
build-aux/: .gitignore
data/: .gitignore  .licheignore  Makefile.am
m4/: .gitignore  .licheignore
src/: .gitignore  .licheignore  Makefile.am  __init__.py  directory.py  file.py  job.py  license.py  liche.in  log.py  main.py  settings.py.in  stream.py  utils.py
tests/: .gitignore  .licheignore
tests/test-00/: .licheignore
